// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`objectContainingOnly should check if object contains only the expected properties 1`] = `
<d>expect(</b><r>received</g><d>).</b>toEqual<d>(</b><g>expected</g><d>) // deep equality</b>

Expected: <g>objectContainingOnly<[object Object]></g>
Received: <r>{"a": 1, "b": 2}</g>
`;

exports[`objectContainingOnly should check if object contains only the expected properties 2`] = `
<d>expect(</b><r>received</g><d>).</b>toEqual<d>(</b><g>expected</g><d>) // deep equality</b>

Expected: <g>objectContainingOnly<[object Object]></g>
Received: <r>{"a": 1, "b": 2}</g>
`;

exports[`objectContainingOnly should check if object contains only the expected properties 3`] = `
<d>expect(</b><r>received</g><d>).</b>toEqual<d>(</b><g>expected</g><d>) // deep equality</b>

Expected: <g>not.objectContainingOnly<[object Object]></g>
Received: <r>{"a": 1, "b": 2}</g>
`;

exports[`objectContainingOnly should throw an error if expected value is not an object 1`] = `
<d>expect(</b><r>received</g><d>).</b>objectContainingOnly<d>(</b><g>1</g><d>)</b>

<b>Matcher error</b>: <g>Expected</g> value must be an object

Expected has type:  number
Expected has value: 1
`;

exports[`objectContainingOnly should throw an error if received value is not an object 1`] = `
<d>expect(</b><r>received</g><d>).</b>toEqual<d>(</b><g>expected</g><d>) // deep equality</b>

Expected: <g>objectContainingOnly<[object Object]></g>
Received: <r>1</g>
`;
